// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`lets you post-process each operation, giving typed access to the meta 1`] = `
{
  "info": {
    "title": "tRPC HTTP-RPC",
    "version": "",
  },
  "openapi": "3.0.0",
  "paths": {
    "/trpc/private": {
      "get": {
        "operationId": "private",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {},
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "description": "",
          },
        },
        "security": [
          {
            "bearerAuth": [],
          },
        ],
        "tags": [],
      },
    },
    "/trpc/public": {
      "get": {
        "operationId": "public",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {},
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "description": "",
          },
        },
        "tags": [],
      },
    },
  },
}
`;

exports[`works 1`] = `
{
  "info": {
    "title": "tRPC HTTP-RPC",
    "version": "",
  },
  "openapi": "3.0.0",
  "paths": {
    "/trpc/dummy.hello.world": {
      "get": {
        "description": "ok",
        "operationId": "dummy.hello.world",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "name",
                  ],
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "result": {
                      "additionalProperties": false,
                      "properties": {
                        "data": {
                          "type": "string",
                        },
                      },
                      "required": [
                        "data",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "result",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "",
          },
        },
        "tags": [
          "dummy",
        ],
      },
    },
    "/trpc/example.createGreeting": {
      "post": {
        "operationId": "example.createGreeting",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "description": "Input for createGreeting",
                "properties": {
                  "name": {
                    "description": "The name to greet",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "result": {
                      "additionalProperties": false,
                      "properties": {
                        "data": {
                          "description": "The greeting text",
                          "type": "string",
                        },
                      },
                      "required": [
                        "data",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "result",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "The greeting text",
          },
        },
        "summary": "Creates a greeting",
        "tags": [
          "example",
        ],
      },
    },
    "/trpc/example.getAll": {
      "get": {
        "operationId": "example.getAll",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {},
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "result": {
                      "additionalProperties": false,
                      "properties": {
                        "data": {
                          "items": {
                            "additionalProperties": false,
                            "properties": {
                              "id": {
                                "type": "string",
                              },
                            },
                            "required": [
                              "id",
                            ],
                            "type": "object",
                          },
                          "type": "array",
                        },
                      },
                      "required": [
                        "data",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "result",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "",
          },
        },
        "tags": [
          "example",
        ],
      },
    },
    "/trpc/example.hello": {
      "get": {
        "operationId": "example.hello",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "text": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "text",
                  ],
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "description": "",
          },
        },
        "tags": [
          "example",
        ],
      },
    },
  },
}
`;

exports[`works with array 1`] = `
{
  "info": {
    "title": "tRPC HTTP-RPC",
    "version": "",
  },
  "openapi": "3.0.0",
  "paths": {
    "/trpc/dummy.hello.world": {
      "get": {
        "description": "ok",
        "operationId": "dummy.hello.world",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "name",
                  ],
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "result": {
                      "additionalProperties": false,
                      "properties": {
                        "data": {
                          "type": "string",
                        },
                      },
                      "required": [
                        "data",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "result",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "",
          },
        },
        "tags": [
          "dummy",
        ],
      },
    },
    "/trpc/exampleWithArrayAsInput.queryWithArrayInput": {
      "get": {
        "operationId": "exampleWithArrayAsInput.queryWithArrayInput",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "description": "",
          },
        },
        "tags": [
          "exampleWithArrayAsInput",
        ],
      },
    },
  },
}
`;

exports[`works with optional zod object 1`] = `
{
  "info": {
    "title": "tRPC HTTP-RPC",
    "version": "",
  },
  "openapi": "3.0.0",
  "paths": {
    "/trpc/dummy.hello.world": {
      "get": {
        "description": "ok",
        "operationId": "dummy.hello.world",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "name": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "name",
                  ],
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "result": {
                      "additionalProperties": false,
                      "properties": {
                        "data": {
                          "type": "string",
                        },
                      },
                      "required": [
                        "data",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "result",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "",
          },
        },
        "tags": [
          "dummy",
        ],
      },
    },
    "/trpc/example.optionalObjectTest": {
      "get": {
        "operationId": "example.optionalObjectTest",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "anOption": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "anOption",
                  ],
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "description": "",
          },
        },
        "tags": [
          "example",
        ],
      },
    },
  },
}
`;
